--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
         </div>
     </section>
 
+
+    <!-- Contact Section -->
+    <section id="team" class="container content-section text-center">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2>Team</h2>
+          <p> With 7+ years of development experience, our team members are passionate about VR & AR technologies. </p>
+          </p>
+          <div class ="col-lg-6 col-lg-offset-3">
+            <img class="team" src = "img/team/livi.jpg">
+            <p> Liv Erickson <br> Founder <br> Virtual Reality Developer </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
@@ -116,6 +133,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
