ready for deploy

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
+                  <!--  <li>
+                        <a class="page-scroll" href="#team">Team</a>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -95,7 +98,7 @@
     </section>
 
 
-    <!-- Contact Section -->
+    <!-- Team Section
     <section id="team" class="container content-section text-center">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
@@ -109,7 +112,7 @@
         </div>
       </div>
     </section>
-
+  -->
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
@@ -117,15 +120,13 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Vizual VR</h2>
                 <p> Our creative experts will work to find a solution tailored directly to your needs to bring your product into this new era of computing. </p>
-                <p><a href="mailto:livi@outlook.com">hello@vizualvr.com</a>
+                <p><a href="mailto:livi@outlook.com">liv@virtualinfinity.io</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/vizualvr" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://twitter.com/misslivirose" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
-                    <li>
-                        <a href="https://github.com/vizualvr" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
+
                     <li>
                         <a href="https://plus.google.com/+LivErickson/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
