--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Vizual VR</h2>
-                <p> We specialize in building custom virtual and augmented reality experiences with data to create new ways of seeing and solving problems.
-                    Our engineers will work with your company to create VR & AR applications tailored to the information that you want to share with the world.
-                    Humans are spacial creatures - isn't it time the digital world reflected that? </p>
+                <p>Vizual VR is a web application for visualizing Excel charts in 3D space using Three.JS, with the support for the experimental WebVR API on Firefox Nightly and select Chromium builds. </p>
+                <img style = "width:75%" src = "..\site\img\webvrsnip.jpg">
+                <p> Get a sense of scale like never before to internalize and remember important data. Move around between columns and experience how things feel when you're alongside your information. </p>
             </div>
         </div>
     </section>
@@ -118,9 +118,9 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Vizual VR</h2>
-                <p> Our creative experts will work to find a solution tailored directly to your needs to bring your product into this new era of computing. </p>
-                <p><a href="mailto:livi@outlook.com">liv@virtualinfinity.io</a>
+                <h2>Meet the Developer</h2>
+                <p> Livi Erickson is an augmented and virtual reality developer with experience building VR & AR apps for Oculus Rift, Meta Glass, Cardboard, and the web.</p>
+                <p><a href="mailto:liv@virtualinfinity.io">liv@virtualinfinity.io</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
@@ -129,6 +129,10 @@
 
                     <li>
                         <a href="https://plus.google.com/+LivErickson/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                    </li>
+
+                    <li>
+                        <a href="http://livierickson.com/blog/" class="btn btn-default btn-lg"><i class="fa fa-pencil fa-fw"></i> <span class="network-name">Blog</span></a>
                     </li>
                 </ul>
             </div>
